05282001 - Added a maximum screen resolution of 1600x1200. This can be raised
            or lowered with an environment variable: export
            BUILD_MAXSCREENRES=1024x768, if you like. Renamed
            BUILD_NO_MOUSE_GRAB to BUILD_NOMOUSEGRAB for consistency. Renamed
            BUILD_SCREENRES to BUILD_USERSCREENRES. Rewrote the spaghetti that
            all this resolution management code had quickly become. The fight
            with attempt_fullscreen_toggle() continues: gave up, and just
            called setbrightness() to fix the palettes. Now tries to use
            SDL_WM_ToggleFullscreen() first before doing it The Hard Way, and
            just returns if there's no window manager reported by
            SDL_GetVideoInfo->wm_available. All the debugging output (of which
            there is still more added today) has been cleaned up and is
            passed through a function called sdldebug() that is used like
            fprintf(stderr), but adds the "BUILDSDL: " string to the front,
            a newline to the end, and prints nothing if debugging is disabled.
            TODO is, as usual, expanding. Added BUILD_HALLOFMIRRORS environment
            var, so that it isn't bound to BUILD_SDLDEBUG anymore. The
            BUILD_SDLDEBUG variable now needs a value: the file to write debug
            information to. The value can be "-" to write to stdout. This is
            for that obnoxious win32 platform.  :)
05292001 - Added a hack for Windows systems using the "windib" driver.
            Apparently windib has no way to distinguish between the return key
            and the keypad enter, and they both come up as the former. Now, if
            you hold down SHIFT while hitting either return or the keypad
            enter, sdl_driver.c reports to the engine that the keypad enter
            was pressed. Now I can get into 3D mode on WinNT 4.0.  :)

--ryan. (icculus@linuxgames.com)

// end of CHANGELOG ...
